--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         });
 
         yesBtn.addEventListener("click", ()=>{
-            ques.innerHTML = "Salamat HAHAHAHAH"
+            ques.innerHTML = "Salamat kiss ko be HAHAHAHAH"
         })
     </script>
 </body>
